--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -399,7 +399,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="index.html"
+                  href="/"
                   aria-expanded="false"
                   ><i class="mdi mdi-view-dashboard"></i
                   ><span class="hide-menu">Dashboard</span></a
@@ -408,7 +408,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="charts.html"
+                  href="/charts"
                   aria-expanded="false"
                   ><i class="mdi mdi-chart-bar"></i
                   ><span class="hide-menu">Charts</span></a
